# rssreader

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  rssreader.cpp
include/: feed.hpp  feed_parser.hpp  main_window.hpp  settings_dialog.hpp  storage.hpp
resources/: resources.qrc  rss_reader.desktop.ini
resources/style/: dark.qss
src/: feed_parser.cpp  main.cpp  main_window.cpp  settings_dialog.cpp  storage.cpp
